; ModuleID = '/home/carl/AnghaBench/git/extr_line-log.c_range_set_move.c'
source_filename = "/home/carl/AnghaBench/git/extr_line-log.c_range_set_move.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.range_set = type { i64, i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.range_set*, %struct.range_set*)* @range_set_move to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @range_set_move(%struct.range_set* %0, %struct.range_set* %1) #0 {
  %3 = alloca %struct.range_set*, align 8
  %4 = alloca %struct.range_set*, align 8
  store %struct.range_set* %0, %struct.range_set** %3, align 8
  store %struct.range_set* %1, %struct.range_set** %4, align 8
  %5 = load %struct.range_set*, %struct.range_set** %3, align 8
  %6 = call i32 @range_set_release(%struct.range_set* %5)
  %7 = load %struct.range_set*, %struct.range_set** %4, align 8
  %8 = getelementptr inbounds %struct.range_set, %struct.range_set* %7, i32 0, i32 2
  %9 = load i32*, i32** %8, align 8
  %10 = load %struct.range_set*, %struct.range_set** %3, align 8
  %11 = getelementptr inbounds %struct.range_set, %struct.range_set* %10, i32 0, i32 2
  store i32* %9, i32** %11, align 8
  %12 = load %struct.range_set*, %struct.range_set** %4, align 8
  %13 = getelementptr inbounds %struct.range_set, %struct.range_set* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load %struct.range_set*, %struct.range_set** %3, align 8
  %16 = getelementptr inbounds %struct.range_set, %struct.range_set* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  %17 = load %struct.range_set*, %struct.range_set** %4, align 8
  %18 = getelementptr inbounds %struct.range_set, %struct.range_set* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = load %struct.range_set*, %struct.range_set** %3, align 8
  %21 = getelementptr inbounds %struct.range_set, %struct.range_set* %20, i32 0, i32 1
  store i64 %19, i64* %21, align 8
  %22 = load %struct.range_set*, %struct.range_set** %4, align 8
  %23 = getelementptr inbounds %struct.range_set, %struct.range_set* %22, i32 0, i32 2
  store i32* null, i32** %23, align 8
  %24 = load %struct.range_set*, %struct.range_set** %4, align 8
  %25 = getelementptr inbounds %struct.range_set, %struct.range_set* %24, i32 0, i32 0
  store i64 0, i64* %25, align 8
  %26 = load %struct.range_set*, %struct.range_set** %4, align 8
  %27 = getelementptr inbounds %struct.range_set, %struct.range_set* %26, i32 0, i32 1
  store i64 0, i64* %27, align 8
  ret void
}

declare dso_local i32 @range_set_release(%struct.range_set*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
